[gd_scene load_steps=2 format=3 uid="uid://dim2iyppu8yd8"]

[ext_resource type="Script" uid="uid://dhnusnluxusf5" path="res://GERF_version/Scripts/starting_menu.gd" id="1_tfirb"]

[node name="starting_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tfirb")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.155513, 0.243889, 0.320241, 1)

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -92.0
offset_right = 92.0
offset_bottom = 32.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 36
text = "Name of the Game!"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.5
offset_top = -18.0
offset_right = 46.5
offset_bottom = 78.0
grow_horizontal = 2
grow_vertical = 2

[node name="1" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="2" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
text = "Controls/tuto/Science?"

[node name="3" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="4" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Label2" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 1.0
offset_top = 37.0
offset_right = 319.0
offset_bottom = 66.0
text = "Coperate with your friends/partner/others to build
 world saving bioengineered solutions"
horizontal_alignment = 1

[connection signal="pressed" from="ColorRect/VBoxContainer/1" to="." method="_on_1_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/2" to="." method="_on_2_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/3" to="." method="_on_3_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/4" to="." method="_on__pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/4" to="." method="_on_4_pressed"]
